--- a/apiCalls/templates/index.html
+++ b/apiCalls/templates/index.html
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- <!DOCTYPE html>
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>capstone</title>
+
+
+
 </head>
 
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript">
-
         window.onload = function() {
             // setup the button click
             document.getElementById("theButton").onclick = function() {
                 doWork()
             };
         }
-
-
         function doWork() {
             var formData = new FormData();
             var request = new XMLHttpRequest();
@@ -31,4 +30,4 @@
     <a href="" id="theButton">Click Me</a>
 </body>
 
-</html>
+</html> -->
